--- a/CRD_Mead1993.Rmd
+++ b/CRD_Mead1993.Rmd
@@ -16,10 +16,14 @@ pacman::p_load(kableExtra, formattable ,htmltools)
 
 ```{r}
 # packages
-pacman::p_load(tidyverse,        # data import and handling
-               conflicted,       # handling function conflicts
-               emmeans, multcomp, multcompView, # mean comparisons
+pacman::p_load(tidyverse, # data import and handling
+               conflicted, # handling function conflicts
+               emmeans, multcomp, multcompView, # adjusted mean comparisons
                ggplot2, desplot) # plots
+
+# conflicts between functions with the same name
+conflict_prefer("filter", "dplyr") 
+conflict_prefer("select", "dplyr")
 ```
 
 # Data
@@ -50,8 +54,8 @@ In order to obtain a field layout of the trial, we can use the `desplot()` funct
 
 ```{r, fig.height = 3, fig.align = "center"}
 desplot(data = dat, flip = TRUE,
-        form = variety ~ col + row,              # fill color per genotype
-        text = variety, cex = 1, shorten = "no", # show genotype names per plot
+        form = variety ~ col + row,              # fill color per variety
+        text = variety, cex = 1, shorten = "no", # show variety names per plot
         main = "Field layout", show.key = F)     # formatting
 ```
 
@@ -92,30 +96,25 @@ mod %>% anova()
 
 ## Mean comparisons
 
-Following a significant F-test, one will want to compare genotype means.
+Following a significant F-test, one will want to compare variety means.
 
 ```{r}
 mean_comparisons <- mod %>% 
-  emmeans(pairwise ~ "variety", adjust="tukey") %>% 
-  pluck("emmeans") %>% 
-  cld(details=TRUE, Letters=letters) # add letter display
+  emmeans(specs = "variety") %>% # get adjusted means for varieties
+  cld(adjust="tukey", Letters=letters) # add compact letter display
 
-# If cld() does not work, try CLD() instead.
-# Add 'adjust="none"' to the emmeans() and cld() statement
-# in order to obtain t-test instead of Tukey!
-
-mean_comparisons$emmeans # adjusted variety means
-
-mean_comparisons$comparisons # differences between adjusted variety means 
+mean_comparisons
 ```
+
+Note that if you would like to see the underyling individual contrasts/differences between adjusted means, simply add `details = TRUE` to the `cld()` statement. Also, find more information on mean comparisons and the Compact Letter Display in the separate [Compact Letter Display Chapter](compactletterdisplay.html)
 
 # Present results
 
 ## Mean comparisons
 
-For this example we can create a plot that displays both the raw data and the results, *i.e.* the comparisons of the adjusted means that are based on the linear model.
+For this example we can create a plot that displays both the raw data and the results, *i.e.* the comparisons of the adjusted means that are based on the linear model. If you would rather have e.g. a bar plot to show these results, check out the separate [Compact Letter Display Chapter](compactletterdisplay.html)
 
-```{r}
+```{r, fig.width=5, fig.height=4, fig.align = "center", class.source = 'fold-hide'}
 ggplot() +
   # black dots representing the raw data
   geom_point(
@@ -124,14 +123,14 @@ ggplot() +
   ) +
   # red dots representing the adjusted means
   geom_point(
-    data = mean_comparisons$emmeans,
+    data = mean_comparisons,
     aes(y = emmean, x = variety),
     color = "red",
     position = position_nudge(x = 0.1)
   ) +
   # red error bars representing the confidence limits of the adjusted means
   geom_errorbar(
-    data = mean_comparisons$emmeans,
+    data = mean_comparisons,
     aes(ymin = lower.CL, ymax = upper.CL, x = variety),
     color = "red",
     width = 0.1,
@@ -139,10 +138,11 @@ ggplot() +
   ) +
   # red letters 
   geom_text(
-    data = mean_comparisons$emmeans,
-    aes(y = emmean, x = variety, label = .group),
+    data = mean_comparisons,
+    aes(y = emmean, x = variety, label = str_trim(.group)),
     color = "red",
-    position = position_nudge(x = 0.2)
+    position = position_nudge(x = 0.2),
+    hjust = 0
   ) + 
   ylim(0, NA) + # force y-axis to start at 0
   ylab("Yield in t/ha") + # label y-axis
