--- a/Repeated_RCBD_PiephoEdmondson2018.Rmd
+++ b/Repeated_RCBD_PiephoEdmondson2018.Rmd
@@ -17,11 +17,18 @@ var_colors <- c("#8cb369", "#f4a259", "#5b8e7d", "#bc4b51")
 
 ```{r}
 # packages
-pacman::p_load(conflicted, # handle conflicting functions
-               agriTutorial, tidyverse,  # data import and handling
+
+# the package "mixedup" is not on CRAN, so that you must install
+# it once with the following code:
+withr::with_envvar(c(R_REMOTES_NO_ERRORS_FROM_WARNINGS = "true"),
+  remotes::install_github('m-clark/mixedup')
+)
+
+pacman::p_load(agriTutorial, tidyverse,  # data import and handling
+               conflicted, # handle conflicting functions
                nlme, glmmTMB, # linear mixed modelling
                mixedup, AICcmodavg, car, # linear mixed model processing
-               emmeans, multcomp, # mean comparisons
+               emmeans, multcomp, multcompView, # mean comparisons
                ggplot2, gganimate, gifski)  # (animated) plots 
 
 conflict_prefer("select", "dplyr") # set select() from dplyr as default
@@ -41,7 +48,7 @@ Please note that this example is also considered on the [MMFAIR website](https:/
 Note that I here decided to give more intuitive names and labels, but this is optional. We also create a column `unit` with one factor level per observation, which will be needed later when using `glmmTMB()`.
 
 ```{r}
-# data (import via URL)
+# data - reformatting agriTutorial::sorghum
 dat <- agriTutorial::sorghum %>% # data from agriTutorial package
   rename(block = Replicate, 
          weekF = factweek,  # week as factor
