--- a/latsquare_Bridges1989.Rmd
+++ b/latsquare_Bridges1989.Rmd
@@ -17,9 +17,9 @@ pacman::p_load(kableExtra, formattable ,htmltools)
 ```{r}
 # packages
 pacman::p_load(agridat, tidyverse, # data import and handling
-               conflicted,         # handling function conflicts
-               emmeans, multcomp,  # mean comparisons
-               ggplot2, desplot)   # plots
+               conflicted, # handling function conflicts
+               emmeans, multcomp, multcompView, # adjusted mean comparisons
+               ggplot2, desplot) # plots
 
 # conflicts: identical function names from different packages
 conflict_prefer("filter", "dplyr")
@@ -124,22 +124,21 @@ Following a significant F-test, one will want to compare genotype means.
 
 ```{r}
 mean_comparisons <- mod %>% 
-  emmeans(pairwise ~ "gen", adjust="tukey") %>% # adjust="none" for t-test
-  pluck("emmeans") %>% 
-  cld(details=TRUE, Letters=letters) # add letter display
+  emmeans(specs = "gen") %>% # get adjusted means for cultivars
+  cld(adjust="tukey", Letters=letters) # add compact letter display
 
-mean_comparisons$emmeans # adjusted genotype means
-
-mean_comparisons$comparisons # differences between adjusted genotype means 
+mean_comparisons
 ```
+
+Note that if you would like to see the underyling individual contrasts/differences between adjusted means, simply add `details = TRUE` to the `cld()` statement. Also, find more information on mean comparisons and the Compact Letter Display in the separate [Compact Letter Display Chapter](compactletterdisplay.html)
 
 # Present results
 
 ## Mean comparisons
 
-For this example we can create a plot that displays both the raw data and the results, *i.e.* the comparisons of the adjusted means that are based on the linear model.
+For this example we can create a plot that displays both the raw data and the results, *i.e.* the comparisons of the adjusted means that are based on the linear model. If you would rather have e.g. a bar plot to show these results, check out the separate [Compact Letter Display Chapter](compactletterdisplay.html)
 
-```{r}
+```{r, fig.width=5, fig.height=4, fig.align = "center", class.source = 'fold-hide'}
 ggplot() +
   # black dots representing the raw data
   geom_point(
@@ -148,14 +147,14 @@ ggplot() +
   ) +
   # red dots representing the adjusted means
   geom_point(
-    data = mean_comparisons$emmeans,
+    data = mean_comparisons,
     aes(y = emmean, x = gen),
     color = "red",
     position = position_nudge(x = 0.1)
   ) +
   # red error bars representing the confidence limits of the adjusted means
   geom_errorbar(
-    data = mean_comparisons$emmeans,
+    data = mean_comparisons,
     aes(ymin = lower.CL, ymax = upper.CL, x = gen),
     color = "red",
     width = 0.1,
@@ -163,7 +162,7 @@ ggplot() +
   ) +
   # red letters 
   geom_text(
-    data = mean_comparisons$emmeans,
+    data = mean_comparisons,
     aes(y = emmean, x = gen, label = .group),
     color = "red",
     position = position_nudge(x = 0.2)
