--- a/RCBD_ClewerScarisbrick2001.Rmd
+++ b/RCBD_ClewerScarisbrick2001.Rmd
@@ -17,8 +17,13 @@ pacman::p_load(kableExtra, formattable ,htmltools)
 ```{r}
 # packages
 pacman::p_load(tidyverse, # data import and handling
-               emmeans, multcomp, # mean comparisons
-               desplot)   # plots
+               conflicted, # handling function conflicts
+               emmeans, multcomp, multcompView, # adjusted mean comparisons
+               ggplot2, desplot) # plots
+
+# conflicts between functions with the same name
+conflict_prefer("filter", "dplyr") 
+conflict_prefer("select", "dplyr")
 ```
 
 # Data
@@ -53,14 +58,6 @@ desplot(data = dat,
   out1 = block,                       # bold lines between blocks
   text = yield, cex = 1, shorten = F, # show yield for each plot
   main = "Field layout", show.key = F) # formatting
-```
-
-While not necessary for the analysis below, it may be convenient to look at the data as a two-way table with ordered blocks and treatments. In this case we would convert our data, which is in the *long format* into the *wide format* as follows:
-
-```{r}
-dat %>% 
-  dplyr::select(block, cultivar, yield) %>% 
-  pivot_wider(names_from = cultivar, values_from = yield)
 ```
 
 We could also have a look at the arithmetic means and standard deviations for yield per `cultivar` or `block`.
@@ -109,26 +106,25 @@ mod %>% anova()
 
 ## Mean comparisons
 
-Following a significant F-test, one will want to compare genotype means.
+Following a significant F-test, one will want to compare cultivar means.
 
 ```{r}
 mean_comparisons <- mod %>% 
-  emmeans(pairwise ~ "cultivar", adjust="tukey") %>% # adjust="none" for t-test
-  pluck("emmeans") %>% 
-  cld(details=TRUE, Letters=letters) # add letter display
+  emmeans(specs = "cultivar") %>% # get adjusted means for cultivars
+  cld(adjust="tukey", Letters=letters) # add compact letter display
 
-mean_comparisons$emmeans # adjusted cultivar means
-
-mean_comparisons$comparisons # differences between adjusted cultivar means 
+mean_comparisons
 ```
+
+Note that if you would like to see the underyling individual contrasts/differences between adjusted means, simply add `details = TRUE` to the `cld()` statement. Also, find more information on mean comparisons and the Compact Letter Display in the separate [Compact Letter Display Chapter](compactletterdisplay.html)
 
 # Present results
 
 ## Mean comparisons
 
-For this example we can create a plot that displays both the raw data and the results, *i.e.* the comparisons of the adjusted means that are based on the linear model.
+For this example we can create a plot that displays both the raw data and the results, *i.e.* the comparisons of the adjusted means that are based on the linear model. If you would rather have e.g. a bar plot to show these results, check out the separate [Compact Letter Display Chapter](compactletterdisplay.html)
 
-```{r}
+```{r, fig.width=5, fig.height=4, fig.align = "center", class.source = 'fold-hide'}
 ggplot() +
   # black dots representing the raw data
   geom_point(
@@ -137,14 +133,14 @@ ggplot() +
   ) +
   # red dots representing the adjusted means
   geom_point(
-    data = mean_comparisons$emmeans,
+    data = mean_comparisons,
     aes(y = emmean, x = cultivar),
     color = "red",
     position = position_nudge(x = 0.1)
   ) +
   # red error bars representing the confidence limits of the adjusted means
   geom_errorbar(
-    data = mean_comparisons$emmeans,
+    data = mean_comparisons,
     aes(ymin = lower.CL, ymax = upper.CL, x = cultivar),
     color = "red",
     width = 0.1,
@@ -152,10 +148,11 @@ ggplot() +
   ) +
   # red letters 
   geom_text(
-    data = mean_comparisons$emmeans,
-    aes(y = emmean, x = cultivar, label = .group),
+    data = mean_comparisons,
+    aes(y = emmean, x = cultivar, label = str_trim(.group)),
     color = "red",
-    position = position_nudge(x = 0.2)
+    position = position_nudge(x = 0.2),
+    hjust = 0
   ) + 
   ylim(0, NA) + # force y-axis to start at 0
   ylab("Yield in t/ha") + # label y-axis
